@@ -24,7 +24,7 @@
  * file named AUTHORS, in the root directory of this distribution.
  */
 /*
- * $Id: amflush.c,v 1.95 2006/07/25 21:41:24 martinea Exp $
+ * $Id: amflush.c,v 1.95.2.1 2006/10/03 11:35:49 martinea Exp $
  *
  * write files from work directory onto tape
  */
@@ -92,6 +92,7 @@ main(
     char **new_argv, **my_argv;
     char *errstr;
     struct tm *tm;
+    char *tapedev;
 
     safe_fd(-1, 0);
     safe_cd();
@@ -227,6 +228,11 @@ main(
 				 NULL);
     logroll_program = vstralloc(libexecdir, "/", "amlogroll", versionsuffix(),
 				NULL);
+
+    tapedev = getconf_str(CNF_TAPEDEV);
+    if (tapedev == NULL) {
+	error("No tapedev specified");
+    }
 
     if(datearg) {
 	sle_t *dir, *next_dir;
